삭제 관련 오류 수정

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <link rel="stylesheet" href="lib/style.css" />
     
+    <!-- <script src="lib/services.js"></script> -->
     <script src="lib/script.js"></script>
-   	<script src="lib/services.js"></script>
    	
 
     <!-- js를 모듈 단위로 나눌 수 있지만 로딩이 너무 느려 주석 처리!-->
